@@ -1,3 +1,8 @@
+2020-10-27  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
+
+	* gdb.base/condbreak.exp: Update the completion tests to
+	consider the '-force' flag.
+
 2020-10-30  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
 
 	* gdb.base/paginate-after-ctrl-c-running.exp: Update with no pagination
